# MAP_VAE

./: .gitignore  README.md  pyproject.toml  run_vae.py  training_results.ipynb  vae_train_8306160.output  vae_tutorial.ipynb
.ipynb_checkpoints/: training_results-checkpoint.ipynb
MAP_VAE/: _version.py
data/: DMS_substitutions.csv  example_config.yaml  pair_test.aln  test.aln  test_1.aln  test_2.aln  test_3.aln  test_4.aln  test_5.aln
evoVAE/: train_StandardVAE.py
notebooks/: aln_trimming.ipynb  aln_trimming.py  ancestors_vs_extants.ipynb  ancestors_vs_extants.py  calc_correlation.ipynb  correlations.ipynb  embedding_clustering.py  entropy.ipynb  esm_embed.ipynb  esm_embed.py  fashion_training.ipynb  final_figures.py  gcn4_0.02_replicates.csv  gcn4_0.04_replicates.csv  gcn4_0.06_replicates.csv  gcn4_0.0_replicates.csv  georgia.py  gfp_aeqvi_workflow.ipynb  gfp_aeqvi_workflow.py  gfp_an_ex_annots.tsv  gfp_extant_annots.tsv  graphing.ipynb  graphing.py  k_fold.py  model_playground.ipynb  model_playground.py  mutation_processing.ipynb  mutation_processing.py  phylo_edges.py  sampling_ancestors.ipynb  sampling_ancestors.py  sanj_experiment.ipynb  seq_sampling.ipynb  seq_similarity.ipynb  seq_similarity.py  seq_training.ipynb  seq_training.py  simulate_ancestors.ipynb  test.ipynb  transfer_learn.py  (+3 more)
scripts/: anc_sampling.py  calc_an_ex_weights.py  calc_covar.py  calc_ex_weights.py  calc_weights.py  esm_top_model.py  g_train.py  k_fold_train_vae.py  oh_top_model.py  overfit_test.py  random_seq_gen.py  sample_size.py  train_ancestor_0.15_sampled_vae.py  train_seqVae.py  (+12 more)
(+364 files in other folders)
