# file: pyproject.toml 

[build-system]
requires = [
    "setuptools >= 65",
    "setuptools-scm>=8.0"
]

[tool.setuptools_scm]
version_file = "MAP_VAE/_version.py"

[project]
name = "MAP_VAE"
version = "0.2.0"
authors = [{name = "Sebastian Porras", email = "s.porras@uq.edu.au" }]
description = "Multiplexed Ancestral Phylogenetic Variational AutoEncoder"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy >= 1.24.3",
    "scikit-learn >= 1.3.2"
]

[tool.setuptools.packages.find]
include = ["MAP_VAE", "MAP_VAE.*"]

#[tool.jupytext.formats]
#"notebooks/" = "ipynb"
#"notebooks/" = "py:percent"

